--- a/src/app/components/first/first.component.html
+++ b/src/app/components/first/first.component.html
@@ -49,7 +49,8 @@
             </div>
         </div>
     </form>
-    <button class="btn btn-primary" (click)="agregarApi()">Agregar Api</button>
+    <button class="btn btn-primary" style="margin-right: 20px ;" (click)="agregarApi()">Agregar Api</button>
+    <button class="btn btn-success" (click)="guardarCambios()">Guardar cambios Api</button>
 </div>
 <div class="container mt-4">
    <table class="table">
@@ -57,6 +58,8 @@
             <tr>
                 <th>ID</th>
                 <th>Nombre</th>
+                <th>-</th>
+                <th>-</th>
                 <th>-</th>
             </tr>
         </thead>
@@ -66,6 +69,12 @@
                 <td>{{api.Description}}</td>
                 <td>
                     <button class="btn btn-secondary" (click)="verMas(api.ID)">Ver mas...</button>
+                </td>
+                <td>
+                    <button class="btn btn-success" (click)="editarApi(api)">Editar</button>
+                </td>
+                <td>
+                    <button class="btn btn-danger" (click)="eliminarApi(api.ID)">Eliminar</button>
                 </td>
             </tr>
         </tbody>
